Use int mask